--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ header1{display: flex; width:100%;}
 <section id="section2">
 <center><font size="4"><b>Plus tv</b></b></font><br> 
 <font size="2" color="green"><b> APLICACIÓN DE TV VARIADO Y PELÍCULAS </b></font>
-<br> <font size="2">Verificado por <b>Virus Total</b></font>
+<br> <font size="2">Verificado por <b>Virus Total</b></font><br>
 <font size="2"><b>Versión:  1.0(3)<br>
 Tamaño:  19.43 MB</b></font></center>
 </section>
@@ -115,7 +115,8 @@ Tamaño:  19.43 MB</b></font></center>
 <a href=" Plus tv_Android-life.apk " ><center>Descargar</center></a>
 </div>
   
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="S2bO08yv"></script>
   
 <section id="section03">
 <div id="section08">
@@ -196,10 +197,8 @@ Politica de privacidad
 </header1>
 
   
-<div id="comentarios"></div>
-
-  
- <script type="text/javascript">(function(d, t, e, m){
+<div id="comentarios"></div> 
+<div class="fb-comments" data-href="https://developer-shop.github.io/Plus-tv/" data-width="100" data-numposts="5"></div>
     
     // Async Rating-Widget initialization.
     window.RW_Async_Init = function(){
