--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Politica de privacidad
 <div id="comentarios"></div> 
 <div class="fb-comments" data-href="https://developer-shop.github.io/Plus-tv/" data-width="100" data-numposts="5"></div>
 
-
+<script type="text/javascript">(function(d, t, e, m){
     // Async Rating-Widget initialization.
     window.RW_Async_Init = function(){
                 
